<resources>
    <string name="app_name">ISEPDevAppMobileAdmin</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="new_on_the_app_text">New on the app? \nSign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="admin_role">Admin role :</string>
    <string name="user_already_in_database">User already in Database</string>
    <string name="back_to_sign_up">Back to Sign Up</string>
    <string name="user_registered_in_database">User registered in Database</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="user_not_in_database">User not in Database</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="menu">Menu</string>
    <string name="list_of_groups_in_the_component">List of Groups in the Component :</string>
    <string name="search">Search ...</string>
    <string name="details">Details</string>
    <string name="list_of_students_in_the_group">List of Students in the Group</string>
    <string name="student_name">Student Name</string>
    <string name="component_score">Component Score</string>
    <string name="list_of_all_components">List of all Components</string>
    <string name="add_button">+</string>
    <string name="add_component">Add Component</string>
    <string name="component_name">Component Name ...</string>
    <string name="add_component_manager">Add Component Manager</string>
    <string name="component_name_title">Component Name :</string>
    <string name="component_manager">Component Manager :</string>
    <string name="name">Name</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="list_of_skills_in_the_component">List of skills in the Component :</string>
    <string name="modify_component">Modify Component</string>
    <string name="modify_component_manager">Modify Component Manager</string>
    <string name="add_skill">Add Skill</string>
    <string name="skill_link_to_view_details">Skill link to view Details ...</string>
    <string name="skill_description">Skill description ...</string>
    <string name="skill_title">Skill title ...</string>
    <string name="skill_information">Skill Information</string>
    <string name="modify_skill">Modify Skill</string>
    <string-array name="admin_role">
        <item>Module Manager</item>
        <item>Component Manager</item>
        <item>Tutor</item>
    </string-array>
</resources>