<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:textSize="30sp">
    </TextView>

    <EditText
        android:id="@+id/sign_up_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="#D3D3D3"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:textSize="20sp"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/sign_up_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="#D3D3D3"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:textSize="20sp"
        android:inputType="textPassword">
    </EditText>

    <EditText
        android:id="@+id/sign_up_first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textColor="@color/black"
        android:textColorHint="#D3D3D3"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:textSize="20sp"
        android:inputType="textMultiLine">
    </EditText>

    <EditText
        android:id="@+id/sign_up_last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:textColor="@color/black"
        android:textColorHint="#D3D3D3"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:textSize="20sp"
        android:inputType="textMultiLine">
    </EditText>

</LinearLayout>