<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ComponentDetailsForModuleManager"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="#D3D3D3">

        <ListView
            android:id="@+id/component_name_for_module_manager_in_skills_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp">
        </ListView>

        <ImageButton
            android:id="@+id/profile_image_button_for_module_manager_in_skills_list_in_component_details"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:layout_gravity="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_profile_image"
            android:visibility="visible">
        </ImageButton>

        <ImageButton
            android:id="@+id/back_to_module_manager_page_from_list_of_skills_in_component"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:visibility="visible"
            android:background="@drawable/ic_previous_page">
        </ImageButton>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginStart="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details : "
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/component_name_title"
                android:textSize="17sp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/component_name_text_view_in_component_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp">
            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/component_manager"
                android:textSize="17sp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/component_manager_text_view_in_component_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/modify_component_details_for_module_manager"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/modify"
                android:textColor="@color/white"
                app:backgroundTint="#8B0000"
                android:layout_marginStart="50dp">
            </Button>

            <Button
                android:id="@+id/delete_component_for_module_manager"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                app:backgroundTint="#8B0000"
                android:layout_marginStart="30dp"
                android:textColor="@color/white">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_of_skills_in_the_component"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold">
            </TextView>

            <EditText
                android:id="@+id/search_bar_for_skills_in_component_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:textColor="@color/black"
                android:textColorHint="#D3D3D3"
                android:inputType="textMultiLine"
                android:textSize="20sp"
                android:layout_marginTop="10dp">
            </EditText>

            <ListView
                android:id="@+id/list_of_skills_in_component_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
            </ListView>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_skills_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:backgroundTint="#8B0000"
        android:text="@string/add_button"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/white">
    </Button>


</RelativeLayout>