<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddSkill"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="#D3D3D3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/add_skill"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/black">
        </TextView>

        <ImageButton
            android:id="@+id/profile_image_button_for_module_manager_in_add_skill_page"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_profile_image"
            android:visibility="visible">
        </ImageButton>

        <ImageButton
            android:id="@+id/back_to_component_details_page_from_add_skill_page"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:visibility="visible"
            android:background="@drawable/ic_previous_page">
        </ImageButton>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skill_information"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="70sp">

        </TextView>

        <EditText
            android:id="@+id/skill_title_in_add_skill_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/skill_title"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColorHint="#D3D3D3"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:inputType="textMultiLine">
        </EditText>

        <EditText
            android:id="@+id/skill_description_in_add_skill_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/skill_description"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColorHint="#D3D3D3"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:inputType="textMultiLine">
        </EditText>

        <EditText
            android:id="@+id/skill_link_to_view_details_in_add_skill_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/skill_link_to_view_details"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColorHint="#D3D3D3"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:inputType="textMultiLine">
        </EditText>

        <Button
            android:id="@+id/add_skill_to_database_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:backgroundTint="#8B0000"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/add_skill"
            android:textSize="18sp"
            android:textColor="@color/white">
        </Button>

    </LinearLayout>

</RelativeLayout>